refix: BRImo Logo Layout

--- a/table.html
+++ b/table.html
@@ -8,7 +8,7 @@
   <body style="background-color: rgb(197, 216, 233)">
     <table align="center" style="background-color: rgb(245, 243, 241)">
       <tr>
-        <td>
+        <td align="center" colspan="2">
           <img
             src="https://i.postimg.cc/KYpfG1kg/Screenshot-2023-07-19-033957.png"
             alt="Logo BRImo"
