fix: color of table

--- a/table.html
+++ b/table.html
@@ -6,7 +6,7 @@
     <title>Invoice Pembayaran BRImo</title>
   </head>
   <body style="background-color: rgb(197, 216, 233)">
-    <table align="center" style="background-color: rgb(245, 243, 241)">
+    <table align="center" style="background-color: white">
       <tr>
         <td align="center" colspan="2">
           <img
