add style to invoice

--- a/table.html
+++ b/table.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Invoice Pembayaran BRImo</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body style="background-color: rgb(197, 216, 233)">
-    <table align="center" style="background-color: white">
+  <body>
+    <table align="center">
       <tr>
         <td align="center" colspan="2">
           <img
@@ -90,10 +91,10 @@
 
       <tr>
         <td>Total</td>
-        <td align="center" style="font-size: 3ch; color: blue">Rp100.000</td>
+        <td align="center">Rp100.000</td>
       </tr>
     </table>
-    <p align="center" style="color: rgb(161, 181, 199)">
+    <p align="center">
       2020 PT.Bank Rakyat Indonesia (Persero) Tbk.
       <br />
       Terdaftar dan diawasi oleh Otoritas Jasa Keuangan
